updated extractions to include more features/extraction methods

--- a/projectCode.ipynb
+++ b/projectCode.ipynb
@@ -281,6 +281,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "830f2aac",
+   "metadata": {},
+   "source": [
+    "### Base Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 566,
    "id": "ab2aff49",
