added ignore warnings

--- a/projectCode.ipynb
+++ b/projectCode.ipynb
@@ -21,7 +21,9 @@
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense, Conv1D, Flatten, MaxPooling1D, Dropout\n",
     "from tensorflow.keras.utils import to_categorical\n",
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
