--- a/projectCode.ipynb
+++ b/projectCode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "01343974",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/katherinebeaty/Documents/DS340 Project/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/Users/nikisingh/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n",
+      "/Users/nikisingh/Library/Python/3.9/lib/python/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "937cdda2",
    "metadata": {},
    "outputs": [
@@ -46,7 +48,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Path to dataset files: /Users/katherinebeaty/.cache/kagglehub/datasets/vbookshelf/respiratory-sound-database/versions/2\n"
+      "Downloading from https://www.kaggle.com/api/v1/datasets/download/vbookshelf/respiratory-sound-database?dataset_version_number=2...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3.69G/3.69G [03:59<00:00, 16.5MB/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting files...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Path to dataset files: /Users/nikisingh/.cache/kagglehub/datasets/vbookshelf/respiratory-sound-database/versions/2\n"
      ]
     }
    ],
@@ -59,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "3e761a72",
    "metadata": {},
    "outputs": [
@@ -88,7 +118,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
+   "id": "323b724c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Patient_ID</th>\n",
+       "      <th>Diagnosis</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>101</td>\n",
+       "      <td>URTI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>102</td>\n",
+       "      <td>Healthy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>103</td>\n",
+       "      <td>Asthma</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>104</td>\n",
+       "      <td>COPD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>105</td>\n",
+       "      <td>URTI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121</th>\n",
+       "      <td>222</td>\n",
+       "      <td>COPD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>223</td>\n",
+       "      <td>COPD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123</th>\n",
+       "      <td>224</td>\n",
+       "      <td>Healthy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>124</th>\n",
+       "      <td>225</td>\n",
+       "      <td>Healthy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>125</th>\n",
+       "      <td>226</td>\n",
+       "      <td>Pneumonia</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>126 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Patient_ID  Diagnosis\n",
+       "0           101       URTI\n",
+       "1           102    Healthy\n",
+       "2           103     Asthma\n",
+       "3           104       COPD\n",
+       "4           105       URTI\n",
+       "..          ...        ...\n",
+       "121         222       COPD\n",
+       "122         223       COPD\n",
+       "123         224    Healthy\n",
+       "124         225    Healthy\n",
+       "125         226  Pneumonia\n",
+       "\n",
+       "[126 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_kaggle\n",
+    "#patient_labels_kaggle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "ca836f9e",
    "metadata": {},
    "outputs": [
@@ -141,8 +290,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ef608ac3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Patient_ID</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Sound type</th>\n",
+       "      <th>Diagnosis</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>70</td>\n",
+       "      <td>M</td>\n",
+       "      <td>P L L</td>\n",
+       "      <td>I E W</td>\n",
+       "      <td>Asthma</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>52</td>\n",
+       "      <td>F</td>\n",
+       "      <td>P L L</td>\n",
+       "      <td>E W</td>\n",
+       "      <td>Asthma</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>50</td>\n",
+       "      <td>F</td>\n",
+       "      <td>P L L</td>\n",
+       "      <td>I E W</td>\n",
+       "      <td>Asthma</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>4</td>\n",
+       "      <td>81</td>\n",
+       "      <td>M</td>\n",
+       "      <td>P R L</td>\n",
+       "      <td>I C B</td>\n",
+       "      <td>Plueral Effusion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>5</td>\n",
+       "      <td>70</td>\n",
+       "      <td>M</td>\n",
+       "      <td>P L L</td>\n",
+       "      <td>I C B</td>\n",
+       "      <td>Plueral Effusion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>107</th>\n",
+       "      <td>87</td>\n",
+       "      <td>63</td>\n",
+       "      <td>M</td>\n",
+       "      <td>P R L</td>\n",
+       "      <td>E W</td>\n",
+       "      <td>COPD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108</th>\n",
+       "      <td>88</td>\n",
+       "      <td>26</td>\n",
+       "      <td>M</td>\n",
+       "      <td>P L M</td>\n",
+       "      <td>N</td>\n",
+       "      <td>Healthy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>89</td>\n",
+       "      <td>62</td>\n",
+       "      <td>M</td>\n",
+       "      <td>P L L</td>\n",
+       "      <td>E W</td>\n",
+       "      <td>COPD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>110</th>\n",
+       "      <td>90</td>\n",
+       "      <td>51</td>\n",
+       "      <td>M</td>\n",
+       "      <td>P R L</td>\n",
+       "      <td>E W</td>\n",
+       "      <td>COPD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>111</th>\n",
+       "      <td>91</td>\n",
+       "      <td>30</td>\n",
+       "      <td>M</td>\n",
+       "      <td>P L M</td>\n",
+       "      <td>N</td>\n",
+       "      <td>Healthy</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>91 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Patient_ID  Age Gender Location Sound type         Diagnosis\n",
+       "0             1   70      M    P L L      I E W            Asthma\n",
+       "1             2   52      F   P L L         E W            Asthma\n",
+       "2             3   50      F   P L L       I E W            Asthma\n",
+       "5             4   81      M   P R L       I C B  Plueral Effusion\n",
+       "7             5   70      M    P L L      I C B  Plueral Effusion\n",
+       "..          ...  ...    ...      ...        ...               ...\n",
+       "107          87   63      M   P R L         E W              COPD\n",
+       "108          88   26      M    P L M          N           Healthy\n",
+       "109          89   62      M    P L L        E W              COPD\n",
+       "110          90   51      M   P R L         E W              COPD\n",
+       "111          91   30      M    P L M          N           Healthy\n",
+       "\n",
+       "[91 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_mendeley\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d75c86b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -150,7 +465,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -164,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.14"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
